--- a/4.30/User/css/main.css
+++ b/4.30/User/css/main.css
@@ -36,6 +36,10 @@
 .result-tab tr:nth-child(odd){background: #f9f9f9;}
 .result-tab tr:hover{background: #f1f1f1;}
 .result-tab tr.even-tr{background: #e9fff2;}
+.link-update,.list-del{
+	margin-left: 20px;
+	margin-right: 20px;
+}
 .comment-tab{border-bottom: 1px solid #ddd;padding-left: 15px;margin-bottom: 10px;}
 .comment-tab a{float: left;}
 .comment-tab a.on{padding: 0 15px;background: #49afcd;color: #fff;border-radius:5px 5px 0 0;}
@@ -55,4 +59,5 @@
 .sys-info-list li{line-height: 35px;border-bottom: 1px dashed #eaeaea;}
 .res-lab{color: #909090;}
 .res-info{font-size: 15px;}
+.save{margin-left: 20%}
 .sort-input{width: 25px;text-align: center;}
