--- a/4.30/css/loginDialog.css
+++ b/4.30/css/loginDialog.css
@@ -9,6 +9,8 @@
 .inputBox{border:1px solid #c3c3c3;padding:1px 3px 6px 3px;border-radius:5px;margin-left:5px;}
 #txtName{height:27px;width:230px;border:none;}
 #txtPwd{height:27px;width:230px;border:none;}
-#loginbtn{color:White;background:#4490f7;text-decoration:none;padding:0;margin-left:40px;margin-top:10px;border-radius:5px;opacity:0.8;filter:alpha(opacity=80);float: left;width: 120px;text-align: center;}
-#signupbtn{color:White;background:#4490f7;text-decoration:none;padding:0;margin-right:40px;margin-top:10px;border-radius:5px;opacity:0.8;filter:alpha(opacity=80);float: right;width: 120px;text-align: center;}
+#loginbtn{color:White;
+    background:#4490f7;
+    text-decoration:none;padding:0;margin-left:40px;margin-top:10px;border-radius:5px;opacity:0.8;filter:alpha(opacity=80);float: left;width: 120px;text-align: center;height: 40px;}
+#signupbtn{height: 40px;color:White;background:#4490f7;text-decoration:none;padding:0;margin-right:40px;margin-top:10px;border-radius:5px;opacity:0.8;filter:alpha(opacity=80);float: right;width: 120px;text-align: center;}
 #example{position:fixed;left:390px;top:30px;color:White;background:#4490f7;text-decoration:none;padding:10px 95px;margin-left:87px;margin-top:40px;border-radius:5px;opacity:0.6;filter:alpha(opacity=60);}
